# OpenDoctoratePy-EX-Public

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_pip.cmd  start_local_server.bat  start_local_server.cmd  start_server_poetry.cmd  steup_poetry.cmd
.github/workflows/: auto_update.yml
config/: assist.json  config.json  exConfig.json  mailCollection.json
data/crisisv2/: cc3.json  cc4.json
data/excel/: range_table.json
data/gacha/: ATTAIN_24_0_3.json  ATTAIN_34_0_3.json  ATTAIN_45_0_5.json  ATTAIN_57_0_4.json  ATTAIN_68_0_4.json  BOOT_0_1_1.json  BOOT_0_1_2.json  BOOT_0_1_3.json  CLASSIC_37_0_1.json  CLASSIC_37_0_2.json  CLASSIC_38_0_1.json  CLASSIC_38_0_3.json  CLASSIC_39_0_1.json  CLASSIC_39_0_2.json  CLASSIC_40_0_1.json  CLASSIC_40_0_2.json  CLASSIC_41_0_1.json  CLASSIC_42_0_1.json  CLASSIC_42_0_2.json  CLASSIC_42_0_3.json  CLASSIC_43_0_1.json  CLASSIC_44_0_1.json  CLASSIC_44_0_3.json  CLASSIC_45_0_1.json  CLASSIC_45_0_3.json  CLASSIC_45_0_4.json  CLASSIC_47_0_1.json  CLASSIC_47_0_3.json  CLASSIC_48_0_1.json  CLASSIC_48_0_2.json  CLASSIC_49_0_1.json  (+368 more)
docs/: DEVELOP.md  README_EN.md  updata_log.md
env/: pyvenv.cfg
server/: account.py  activity.py  app.py  background.py  building.py  campaignV2.py  char.py  charBuild.py  charm.py  charrotation.py  constants.py  crisis.py  deepsea.py  gacha.py  logs.py  mail.py  mission.py  online.py  other.py  pay.py  quest.py  rlUtils.py  rlv2.py  sandbox.py  shop.py  social.py  story.py  templateShop.py  tower.py  user.py  utils.py  vecbreak.py  virtualtime.py
生成助战/: config.json  生成助战.py
(+35 files in other folders)
